--- a/apps/examples/hello/Kconfig
+++ b/apps/examples/hello/Kconfig
@@ -13,7 +13,7 @@ if EXAMPLES_HELLO
 
 config EXAMPLES_HELLO_PROGNAME
 	string "Program name"
-	default "hello"
+	default "iplite"
 	---help---
 		This is the name of the program that will be used when the NSH ELF
 		program is installed.
