--- a/apps/examples/hello/Kconfig
+++ b/apps/examples/hello/Kconfig
@@ -5,7 +5,7 @@
 
 config EXAMPLES_HELLO
 	tristate "\"Hello, World!\" example"
-	default n
+	default y
 	---help---
 		Enable the \"Hello, World!\" example
 
@@ -13,7 +13,7 @@ if EXAMPLES_HELLO
 
 config EXAMPLES_HELLO_PROGNAME
 	string "Program name"
-	default "hello"
+	default "iplite"
 	---help---
 		This is the name of the program that will be used when the NSH ELF
 		program is installed.
