changed iptlite file name

--- a/apps/netutils/iptlite/Makefile
+++ b/apps/netutils/iptlite/Makefile
@@ -13,6 +13,6 @@ MODULE    = $(CONFIG_NETUTILS_IPTLITE)
 PROGNAME  = $(CONFIG_NETUTILS_IPTLITE_PROGNAME)
 PRIORITY  = $(CONFIG_NETUTILS_IPTLITE_PRIORITY)
 STACKSIZE = $(CONFIG_NETUTILS_IPTLITE_STACKSIZE)
-MAINSRC = iptlite.c
+MAINSRC = iptlite_main.c
 
 include $(APPDIR)/Application.mk
